# ata

./: .gitignore  Cargo.toml  README.md  recorded.raw
pages/: client.html
src/: main.rs
src/backend/: server.rs
src/platform/: audio_capture_client.rs  audio_capture_client_windows.rs
src/pub/: main.rs
src/pub/audio_sender/: audio_sender.rs  mod.rs
src/pub/platform/: audio_capture_client_windows.rs  mod.rs
src/signal/: main.rs
src/signal/mapper/: bean.rs  mapper.rs  mod.rs
