[package]
name = "a2a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasapi = "0.12.0"
log = "0.4.14"
simplelog = "0.11.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
actix-web = "4"
actix-files = "0.6.2"
opus = "0.3.0"